--- a/007.html
+++ b/007.html
@@ -75,18 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024072600045</div></li>
+                    <div class="detail-value " id="reqNo">A1400002024073004851</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省，河南省，河北省</div></li>
+				<div class="detail-value " id="passDists">山西省，河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年07月29日18时25分至 2024年08月10日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年07月31日17时58分至 2024年08月03日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:宜昌市夷陵区鸦白建材厂--G348-鸦南收费站-G59呼北高速-G42沪蓉 高速-G55二广高速-鄂豫界；<br><hr>
-<span id="pro">河南省</span>:豫鄂界-G55二广高速-S83兰南高速-G0421许广高速-G4京港澳高速-豫冀界；<br><hr>
-<span id="pro">河北省</span>: 冀豫界--G4京港澳高速-G95首都环线高速-G7京新高速-G6京藏高速-东花园收费站-G234-北京卓晟起重搬运有限公司<br><hr>
+<span id="pro">山西省</span>:昔阳收费站--S45天黎高速-G5京昆高速--晋冀界；<br><hr>
+<span id="pro">河北省</span>: 冀晋界--G5京昆高速-井陉矿区收费站-S202--河北鑫鸿装备制造产业园<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -100,9 +99,9 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">电缆盘3件</div></li>
+                    <div class="detail-value " id="cargoInfo">翻斗车1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">43.09吨</div></li>
+                    <div class="detail-value " id="cargoWeight">43.10吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
                     <div class="detail-value " id="cargoOutline">12.00 × 3.75 ×3.60</div></li>
                     
@@ -124,7 +123,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">21.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">21.00 × 3.75× 4.95</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -136,8 +135,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+山西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
