--- a/013.html
+++ b/013.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">内蒙古自治区</span>:海勃湾收费站--G6京藏高速--G18荣乌高速--G65包茂高速--蒙陕界；<br><hr>
+<span id="pro">内蒙古自治区</span>:棋盘井收费站--G1816乌玛高速--G18荣乌高速--G65包茂高速--蒙陕界；<br><hr>
 <span id="pro">陕西省</span>: 陕蒙界--G65包茂高速--孟家湾收费站--G210--兴泰安汽车货运有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台润泽道路运输有限公司</div></li>
