--- a/006.html
+++ b/006.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:永捷工业城--X194--东园大道辅路--东园大道--横沥康乐路--东部快速干线--东深路--清樟路--清溪大道--埔星西路--埔星东路--葵湖街--清溪东收费站--G0422武深高速--S86深圳外环高速--S29从莞深高速--G35济广高速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr>
+<span id="pro">广东省</span>:永捷工业城--东园大道辅路--东园大道--横沥康乐路--东部快速干线--东深路--清樟路--清溪大道--埔星西路--埔星东路--葵湖街--清溪东收费站--G0422武深高速--S86深圳外环高速--S29从莞深高速--G35济广高速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr>
 <span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
