--- a/022.html
+++ b/022.html
@@ -75,17 +75,18 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4500002024061284974</div></li>
+                    <div class="detail-value " id="reqNo">A6300002024101784974</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广西壮族自治区，云南省</div></li>
+				<div class="detail-value " id="passDists">青海省，甘肃省 ，新疆维吾尔自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年06月12日18时05分至 2024年06月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年10月18日18时05分至 2024年10月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>:岭脚收费站--G6517梧柳高速--G59呼北高速--S52平那高速--G7212柳北高速--S52平那高速--G80广昆高速--桂滇界；<br><hr>
-<span id="pro">云南省</span>:滇桂界--G80广昆高速--高帮收费站<br><hr></div></li>
+<span id="pro">青海省</span>:同仁北收费站-G0611张汶高速-海东收费站-G0611张汶高速-西宁北收费站-G0611张汶高速-盘坡收费站-G227-青甘界；<br><hr>
+<span id="pro">甘肃省</span>:甘青界-G227-扁都口收费站-G0611张汶高速-G30连霍高速桥-桥湾收费站-G215-马鬃山北收费站-G7京新高速--甘新界；<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:新甘界-白山泉-G7京新高速-米东北收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,11 +99,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机1台</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.30吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">13.00 × 3.60 ×3.60</div></li>
+                    <div class="detail-value " id="cargoOutline">13.00 × 3.75 ×3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -122,7 +123,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">22.00 × 3.60× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -134,8 +135,9 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广西壮族自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-云南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+新疆维吾尔自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
