--- a/022.html
+++ b/022.html
@@ -75,18 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A6300002024101784974</div></li>
+                    <div class="detail-value " id="reqNo">A6200002024101782574</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">青海省，甘肃省 ，新疆维吾尔自治区</div></li>
+				<div class="detail-value " id="passDists">甘肃省 ，新疆维吾尔自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年10月18日18时05分至 2024年10月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年10月18日18时32分至 2024年10月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">青海省</span>:同仁北收费站-G0611张汶高速-海东收费站-G0611张汶高速-西宁北收费站-G0611张汶高速-盘坡收费站-G227-青甘界；<br><hr>
-<span id="pro">甘肃省</span>:甘青界-G227-扁都口收费站-G0611张汶高速-G30连霍高速桥-桥湾收费站-G215-马鬃山北收费站-G7京新高速--甘新界；<br><hr>
-<span id="pro">新疆维吾尔自治区</span>:新甘界-白山泉-G7京新高速-米东北收费站<br><hr></div></li>
+<span id="pro">甘肃省</span>:安泰汽车修理厂-G312-清泉收费站-G30连霍高速-柳园收费站-G30连霍高速-甘新界；<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:新甘界-星星峡-G30连霍高速-烟墩收费站-G30连霍高速-乌拉泊西主线收费站-G30连霍高速-八钢立交-头屯河公路-新疆恒汇机电汽配城<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,7 +134,6 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 新疆维吾尔自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
